--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1274,6 +1274,24 @@ html {
       color: #c59d5f; }
     .bl_frontend .main .section-ordering-steps .section-content .item:hover .content {
       border-color: #c59d5f; }
+  .bl_frontend .main .section-list-service .section-content {
+    margin-top: 20px; }
+    .bl_frontend .main .section-list-service .section-content .item .image {
+      position: relative;
+      overflow: hidden; }
+      .bl_frontend .main .section-list-service .section-content .item .image a {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 2;
+        opacity: 0;
+        visibility: hidden; }
+      .bl_frontend .main .section-list-service .section-content .item .image img {
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
+        object-position: center; }
   .bl_frontend .footer {
     padding: 40px 0;
     background-color: #131212; }
