--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -807,6 +807,45 @@
         }
       }
     }
+    .section-list-service{
+      .section-content{
+        margin-top: 20px;
+        .item{
+          .image{
+            position: relative;
+            overflow: hidden;
+            a{
+              position: absolute;
+              top: 50%;
+              left: 50%;
+              transform: translate(-50%, -50%);
+              z-index: 2;
+              opacity: 0;
+              visibility: hidden;
+            }
+            img{
+              width: 100%;
+              height: 300px;
+              object-fit: cover;
+              object-position: center;
+            }
+          }
+          .content{
+            .title{
+              >*{
+
+              }
+            }
+            .price{
+
+            }
+            .note{
+
+            }
+          }
+        }
+      }
+    }
   }
   .footer{
     padding: 40px 0;
