--- a/assets/scss/_root.scss
+++ b/assets/scss/_root.scss
@@ -23,8 +23,12 @@ html{
 .btn {
   position: relative;
   display: inline-block;
-  font-size: 16px;
-  padding: 6px 30px 8px;
+  font-size: 14px;
+  padding: 6px 10px 6px;
+  @media screen and (min-width: 992px) {
+    font-size: 16px;
+    padding: 6px 20px 6px;
+  }
   border-width: 2px;
   border-style: solid;
   color: #ffffff;
@@ -81,6 +85,28 @@ html{
       height: 0;
       left: 0;
     }
+  }
+}
+.btn-default {
+  display: inline-block;
+  font-size: 14px;
+  padding: 8px 10px 8px;
+  @media screen and (min-width: 992px) {
+    font-size: 18px;
+    padding: 8px 30px 8px;
+  }
+  border-width: 2px;
+  border-style: solid;
+  color: #ffffff;
+  background-color: #c59d5f;
+  border-color: #c59d5f;
+  border-radius: 0;
+  transition: all .3s;
+  white-space: nowrap;
+  &:hover {
+    background: transparent;
+    border-color: #c59d5f;
+    color: #c59d5f;
   }
 }
 .btn-delete{
