--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1633,7 +1633,7 @@ html {
         left: 50%;
         top: 0px;
         transform: translateX(-50%);
-        background-color: #f4f1ea;
+        background-color: #fff;
         font-size: 20px;
         line-height: 1.5;
         color: #041527;
@@ -1736,6 +1736,9 @@ html {
             .bl_frontend .main .section-list-service .section-content .wrap-choice-group .wrapper-check .wrap-form-check .form-check .form-check-input:checked[type=checkbox] {
               border-color: #c59d5f;
               background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23c59d5f' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3e%3c/svg%3e"); }
+            .bl_frontend .main .section-list-service .section-content .wrap-choice-group .wrapper-check .wrap-form-check .form-check .form-check-input:checked[type=radio] {
+              border-color: #c59d5f;
+              background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23c59d5f'/%3e%3c/svg%3e"); }
             .bl_frontend .main .section-list-service .section-content .wrap-choice-group .wrapper-check .wrap-form-check .form-check .form-check-input:focus {
               box-shadow: unset; }
           .bl_frontend .main .section-list-service .section-content .wrap-choice-group .wrapper-check .wrap-form-check .form-check .form-check-label {
@@ -2114,6 +2117,33 @@ html {
           font-weight: 700; }
         .bl_frontend .main .section-cart .wrapper .table tbody tr td .img-food {
           width: 100px; }
+        .bl_frontend .main .section-cart .wrapper .table tbody tr td .w_qty {
+          max-width: 120px; }
+          .bl_frontend .main .section-cart .wrapper .table tbody tr td .w_qty .form-group {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+            padding: 5px 10px;
+            border: 1px solid #e3e0db; }
+            .bl_frontend .main .section-cart .wrapper .table tbody tr td .w_qty .form-group a {
+              display: flex; }
+              .bl_frontend .main .section-cart .wrapper .table tbody tr td .w_qty .form-group a i {
+                font-size: 10px; }
+            .bl_frontend .main .section-cart .wrapper .table tbody tr td .w_qty .form-group .form-control {
+              padding: 0 15px;
+              border: 0;
+              font-size: 15px;
+              letter-spacing: 0;
+              line-height: 1.4;
+              color: #041527;
+              text-align: center; }
+              .bl_frontend .main .section-cart .wrapper .table tbody tr td .w_qty .form-group .form-control:focus {
+                border: 0;
+                box-shadow: unset; }
+              .bl_frontend .main .section-cart .wrapper .table tbody tr td .w_qty .form-group .form-control::-webkit-outer-spin-button, .bl_frontend .main .section-cart .wrapper .table tbody tr td .w_qty .form-group .form-control::-webkit-inner-spin-button {
+                -webkit-appearance: none;
+                margin: 0; }
     .bl_frontend .main .section-cart .wrap-total {
       font-size: 20px;
       letter-spacing: 0.5px;
