--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -1026,7 +1026,7 @@
             left: 50%;
             top: 0px;
             transform: translateX(-50%);
-            background-color: #f4f1ea;
+            background-color: #fff;
             font-size: 20px;
             line-height: 1.5;
             color: #041527;
@@ -1167,6 +1167,10 @@
                     &:checked[type=checkbox] {
                         border-color: #c59d5f;
                         background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23c59d5f' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3e%3c/svg%3e");
+                    }
+                    &:checked[type=radio] {
+                      border-color: #c59d5f;
+                      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23c59d5f'/%3e%3c/svg%3e");
                     }
                     &:focus{
                         box-shadow: unset;
@@ -1769,6 +1773,42 @@
                 .img-food{
                   width: 100px;
                 }
+                .w_qty{
+                  max-width: 120px;
+                  .form-group{
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    justify-content: space-between;
+                    padding: 5px 10px;
+                    border: 1px solid #e3e0db;
+                    a{
+                      display: flex;
+                      i{
+                        font-size: 10px;
+                      }
+                    }
+                    .form-control{
+                      padding: 0 15px;
+                      border: 0;
+                      font-size: 15px;
+                      letter-spacing: 0;
+                      line-height: 1.4;
+                      color: #041527;
+                      text-align: center;
+                      &:focus{
+                        border: 0;
+                        box-shadow: unset;
+                      }
+                      &::-webkit-outer-spin-button,
+                      &::-webkit-inner-spin-button {
+                        -webkit-appearance: none;
+                        margin: 0;
+                      }
+                    }
+                  }
+                }
+
               }
             }
           }
